# swarn_auto_research

./: .gitignore  AGENTS.md  Book_style.md  CLAUDE.md  README.md  pyproject.toml
.agents/: knowledge_base.md
.codex/: config.toml
automous_blog/: 404.html  homepage-mode.js  index.html
handbook/: astro.config.mjs  package.json
handbook_builder/: __init__.py  augment.py  book_rewrite.py  build.py  deploy.py  diagrams.py  dispatch.py  frontmatter.py  glossary.py  linker.py  markdown_sanitize.py  pipeline.py  run_metadata.py  scaffold.py  site_templates.py  tags_vocab.json  validation.py  verify.py
knowledge_gap_aggregator/: __init__.py  aggregate.py  alias.py  schema.py  signals.py
scripts/: build_handbook.py  publish_handbook_pages.py  regen_umbrella_index.py  run_auto_research.py  write_method_chapters.py
sdk/: codex.py
swarn_research_mcp/: README.md  __init__.py  bulk_search_config.json  research_book.py  server.py
tests/: conftest.py  test.ipynb  test.py  test_2.py  test_auto_research_runner_cli.py  test_auto_research_runner_dispatch.py  test_auto_research_runner_stage11.py  test_auto_research_runner_state.py  test_codex_scaffold.py  test_codex_sdk_reliability.py  test_contract_repair.py  test_final_method_filtering.py  test_gap_aggregator_alias.py  test_gap_aggregator_digest.py  test_gap_aggregator_signals.py  test_gap_classifier_skill.py  test_handbook_augment.py  test_handbook_book_rewriter.py  test_handbook_deploy.py  test_handbook_diagram.py  test_handbook_glossary.py  test_handbook_linker.py  test_handbook_markdown_sanitize.py  (+29 more)
(+402 files in other folders)
