[project]
name = "swarn-auto-research"
version = "0.1.0"
description = "Standalone MCP research tools copied from auto_research."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.12.0",
    "codex-app-server-sdk>=0.3.2",
    "jsonschema>=4.26.0",
    "markdownify>=0.13.1",
    "mcp>=1.0.0",
    "pypdf>=5.0.0",
    "requests>=2.32.0",
]

[project.scripts]
swarn-auto-research-mcp = "swarn_research_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarn_research_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
